; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/fcoe/extr_fcoe_ctlr.c_fcoe_ctlr_map_dest.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/fcoe/extr_fcoe_ctlr.c_fcoe_ctlr_map_dest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fcoe_ctlr = type { i64, i32, i64 }

@FIP_MODE_VN2VN = common dso_local global i64 0, align 8
@FIP_VN_FC_MAP = common dso_local global i32 0, align 4
@FIP_DEF_FC_MAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fcoe_ctlr*)* @fcoe_ctlr_map_dest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fcoe_ctlr_map_dest(%struct.fcoe_ctlr* %0) #0 {
  %2 = alloca %struct.fcoe_ctlr*, align 8
  store %struct.fcoe_ctlr* %0, %struct.fcoe_ctlr** %2, align 8
  %3 = load %struct.fcoe_ctlr*, %struct.fcoe_ctlr** %2, align 8
  %4 = getelementptr inbounds %struct.fcoe_ctlr, %struct.fcoe_ctlr* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @FIP_MODE_VN2VN, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.fcoe_ctlr*, %struct.fcoe_ctlr** %2, align 8
  %10 = getelementptr inbounds %struct.fcoe_ctlr, %struct.fcoe_ctlr* %9, i32 0, i32 2
  %11 = load i64, i64* %10, align 8
  %12 = load i32, i32* @FIP_VN_FC_MAP, align 4
  %13 = call i32 @hton24(i64 %11, i32 %12)
  br label %20

14:                                               ; preds = %1
  %15 = load %struct.fcoe_ctlr*, %struct.fcoe_ctlr** %2, align 8
  %16 = getelementptr inbounds %struct.fcoe_ctlr, %struct.fcoe_ctlr* %15, i32 0, i32 2
  %17 = load i64, i64* %16, align 8
  %18 = load i32, i32* @FIP_DEF_FC_MAP, align 4
  %19 = call i32 @hton24(i64 %17, i32 %18)
  br label %20

20:                                               ; preds = %14, %8
  %21 = load %struct.fcoe_ctlr*, %struct.fcoe_ctlr** %2, align 8
  %22 = getelementptr inbounds %struct.fcoe_ctlr, %struct.fcoe_ctlr* %21, i32 0, i32 2
  %23 = load i64, i64* %22, align 8
  %24 = add nsw i64 %23, 3
  %25 = call i32 @hton24(i64 %24, i32 0)
  %26 = load %struct.fcoe_ctlr*, %struct.fcoe_ctlr** %2, align 8
  %27 = getelementptr inbounds %struct.fcoe_ctlr, %struct.fcoe_ctlr* %26, i32 0, i32 1
  store i32 1, i32* %27, align 8
  ret void
}

declare dso_local i32 @hton24(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
